# smartdns

./: .gitignore  CMakeLists.txt
plugin/smartdns-ui/: CMakeLists.txt
src/: CMakeLists.txt
